application upgrade - new libraries and funtionalities

--- a/view/popup.html
+++ b/view/popup.html
@@ -3,6 +3,7 @@
   <head>
     <style>
     </style>
+	<script src="/src/jquery-3.6.3.min.js"></script>
     <script src="/src/popup.js"></script>
 	
   </head>
