--- a/view/formulario.html
+++ b/view/formulario.html
@@ -1,65 +1,85 @@
 <!doctype html>
 <html>
-  <head>
-    <style>
-    </style>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="/src/jquery-1.11.1.min.js"></script>
+
+<head>
+	<meta charset="UTF-8">
+	<style>
+	</style>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<script src="/src/jquery-3.6.3.min.js"></script>
+	<script src="/src/utils.js"></script>
 	<script src="/src/formulario.js"></script>
-  </head>
-  <body>
-  
-  <div class="container-sm">
-  
-	<h3>Datos para Pasaporte</h3>
-  
-    <form>
-	
-	
-	  <div class="col-sm-5">
-		<label for="txtCedula" class="form-label">Cedula</label>
-		<input type="text" class="form-control" id="txtCedula">
-	  </div>
-	  
-	  <div class="col-sm-5">
-		<label for="txtNombre" class="form-label">Nombres</label>
-		<input type="text" class="form-control" id="txtNombre">
-	  </div>
-	  
-	  <div class="col-sm-5">
-		<label for="txtApellido" class="form-label">Apellidos</label>
-		<input type="text" class="form-control" id="txtApellido">
-	  </div>
-	  
-	  <div class="col-sm-5">
-		<label for="txtCelular" class="form-label">Celular</label>
-		<input type="number" class="form-control" id="txtCelular">
-	  </div>
-	  
-	  <div class="col-sm-5">
-		<label for="txtCorreo" class="form-label">Correo</label>
-		<input type="email" class="form-control" id="txtCorreo">
-	  </div>
-	  
-	  <div class="col-sm-5">
-		<label for="sltTipo" class="form-label">Tipo de pasaporte</label>
-		<select id="sltTipo" class="form-select">
-		  <option selected>Seleccione</option>
-		  <option value="1">Primera vez</option>
-		  <option value="2">Renovacion</option>
-		</select>
-	  </div>
-	  
-	   <div class="col-sm-5">
-		<label for="txtFecha" class="form-label">Fecha de pago</label>
-		<input type="email" class="form-control" id="txtFecha">
-	  </div>
+</head>
+
+<body>
+
+	<div class="container-sm">
+
+		<h3>Datos para Pasaporte</h3>
+
+		<form>
+			<div id="people">
+				
+			</div>
+			
+
+			<div class="col-sm-5">
+				<label for="sltDoc" class="form-label">Tipo de documento</label>
+				<select required="" class="form-control" id="sltDoc" aria-required="true" aria-invalid="false">
+					<option value="CC" selected=""> Cédula de ciudadanía</option>
+					<option value="TI"> Tarjeta de identificación</option>
+					<option value="RC"> Registro Civil (NUIP)</option>
+				</select>
+			</div>
 
 
-	  <button id="btnGuardar" type="button" class="btn btn-primary">Guardar</button>
-	  <button id="btnLimpiar" type="button" class="btn btn-warning">Limpiar</button>
-	</form>
+			<div class="col-sm-5">
+				<label for="txtCedula" class="form-label">Cedula</label>
+				<input type="text" class="form-control" id="txtCedula">
+			</div>
 
-  </div>
-  </body>
+			<div class="col-sm-5">
+				<label for="txtNombre" class="form-label">Nombres</label>
+				<input type="text" class="form-control" id="txtNombre">
+			</div>
+
+			<div class="col-sm-5">
+				<label for="txtApellido" class="form-label">Apellidos</label>
+				<input type="text" class="form-control" id="txtApellido">
+			</div>
+
+			<div class="col-sm-5">
+				<label for="txtCelular" class="form-label">Celular</label>
+				<input type="number" class="form-control" id="txtCelular">
+			</div>
+
+			<div class="col-sm-5">
+				<label for="txtCorreo" class="form-label">Correo</label>
+				<input type="email" class="form-control" id="txtCorreo">
+			</div>
+
+			<div class="col-sm-5">
+				<label for="sltTipo" class="form-label">Tipo de pasaporte</label>
+				<select id="sltTipo" class="form-select">
+					<option selected>Seleccione</option>
+					<option value="1">Primera vez</option>
+					<option value="2">Renovacion</option>
+				</select>
+			</div>
+
+			<div class="col-sm-5">
+				<label for="txtFecha" class="form-label">Fecha de pago</label>
+				<input type="email" class="form-control" id="txtFecha">
+			</div>
+
+
+			<button id="btnGuardar" type="button" class="btn btn-primary">Guardar</button>
+			<button id="btnLimpiar" type="button" class="btn btn-warning">Limpiar</button>
+			
+		</form>
+
+	</div>
+</body>
+
 </html>
